kube.db.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service-database
  namespace: transaction-service
  labels:
    app: transaction-service-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service-database
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: transaction-service-database
    spec:
      volumes:
        - name: mysql-pv
          persistentVolumeClaim:
            claimName: mysql-pvc-transaction-service
      containers:
        - name: transaction-service-database
          image: harbor.mgcorp.co/probiller/probiller-ng/mysql
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-pv
              mountPath: /var/lib/mysql

---

apiVersion: v1
kind: Service
metadata:
  name: transaction-service-database
  namespace: transaction-service
  labels:
    component: transaction-service-database
spec:
  selector:
    app: transaction-service-database
  ports:
    - protocol: TCP
      port: 3407
      name: "api-mysql"
      targetPort: 3306
  type: LoadBalancer
